# RetailPulse

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: Dockerfile  requirements.txt
api/app/: main.py
api/app/core/: config.py  database.py
api/app/models/: schemas.py
api/app/routers/: anomalies.py  categories.py  chat.py  forecasts.py  health.py  historical.py  insights.py  stores.py
api/app/services/: chat.py
api/tests/: conftest.py  test_endpoints.py
data/scripts/: generate_aggregates.py  generate_events.py  generate_products.py  generate_stores.py  generate_transactions.py  generate_weather.py  requirements.txt
data/scripts/db/: base.py  models.py  session.py
docs/: api-spec.md  architecture.md  data-dictionary.md
etl/: Dockerfile
etl/pipelines/: config.py  holiday_pipeline.py  seed.py  weather_pipeline.py
etl/tests/: conftest.py  test_generators.py  test_holiday_pipeline.py  test_weather_pipeline.py
ml/: requirements.txt
ml/configs/: xgboost.yaml
ml/features/: feature_builder.py
ml/models/: anomaly_detector.py  evaluate.py  train.py  xgboost_model.py
ml/tests/: conftest.py  test_anomaly_detector.py  test_feature_builder.py  test_xgboost_model.py
web/: Dockerfile  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/anomalies/: page.tsx
web/src/app/chat/: page.tsx
web/src/components/: AnomalyCard.tsx  CategorySelector.tsx  DemandChart.tsx  KpiCard.tsx  Sidebar.tsx  StoreSelector.tsx
web/src/lib/: api.ts  types.ts
(+2 files in other folders)
